--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" href="/src/output.css">
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+  </style>
 
   <title>Frontend Mentor | Clipboard landing page</title>
 
 
 </head>
-<body class="flex flex-col items-center justify-center w-screen h-screen ">
+<body class="flex font-Bai flex-col items-center justify-center w-screen h-screen ">
   <main class="w-full h-full">
     <section class="bg-[url(/images/bg-header-mobile.png)] pt-35 flex flex-col items-center justify-center bg-no-repeat bg-cover mx-auto ">
       <img src="images/logo.svg" alt="Logo" class="size-36 mb-20">
