--- a/index.html
+++ b/index.html
@@ -1,96 +1,94 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/src/output.css">
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-  </style>
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./images/favicon-32x32.png"
+    />
+    <link rel="stylesheet" href="/src/output.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
+    </style>
 
-  <title>Frontend Mentor | Clipboard landing page</title>
+    <title>Frontend Mentor | Clipboard landing page</title>
+  </head>
+  <body
+    class="flex font-Bai flex-col items-center justify-center p-1 max-w-screen min-h-screen box-border"
+  >
+    <main class="max-w-full max-h-full">
+      <section
+        class="bg-[url(/images/bg-header-mobile.png)] w-full max-w-full h-full mb-52 pt-52 text-center px-15 flex flex-col items-center justify-center bg-no-repeat bg-cover mx-auto"
+      >
+        <img src="images/logo.svg" alt="Logo" class="size-36 mb-20" />
+        <h1 class="font-semibold text-dark-grayish-blue text-4xl mb-5">
+          A history of everything you copy
+        </h1>
+        <p class="text-grayish-blue/90 mb-9">
+          Clipboard allows you to track and organize everything you copy.
+          Instantly access your clipboard on all your devices.
+        </p>
+        <div class="flex flex-col gap-5 w-full text-white">
+          <button
+            class="w-full bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
+          >
+            Download for iOS
+          </button>
+          <button
+            class="w-full bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
+          >
+            Download for Mac
+          </button>
+        </div>
+      </section>
+      <section class="max-w-full max-h-full flex flex-col mb-52">
+        <h1>Keep track of your snippets</h1>
+        <p>
+          Clipboard instantly stores any item you copy in the cloud, meaning you
+          can access your snippets immediately on all your devices. Our Mac and
+          iOS apps will help you organize everything.
+        </p>
+        <div>
+          <img src="images/image-computer.png" alt="Computer" />
+          <div>
+            <div>
+              <h2>Quick Search</h2>
+              <p>
+                Easily search your snippets by content, category, web address,
+                application, and more.
+              </p>
+            </div>
+            <div>
+              <h2>iCloud Sync</h2>
+              <p>Instantly saves and syncs snippets across all your devices.</p>
+            </div>
+            <div>
+              <h2>Complete History</h2>
+              <p>
+                Retrieve any snippets from the first moment you started using
+                the app.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
 
-
-</head>
-<body class="flex font-Bai flex-col items-center justify-center w-screen h-screen ">
-  <main class="w-full h-full">
-    <section class="bg-[url(/images/bg-header-mobile.png)] pt-35 flex flex-col items-center justify-center bg-no-repeat bg-cover mx-auto ">
-      <img src="images/logo.svg" alt="Logo" class="size-36 mb-20">
-      <h1>A history of everything you copy</h1>
-      <p>Clipboard allows you to track and organize everything you
-        copy. Instantly access your clipboard on all your devices.</p>
-      <button>Download for iOS</button>
-      <button>Download for Mac</button>
-    </section>
-  </main>
-
-
-
-
-
-
-
-
-  Keep track of your snippets
-
-  Clipboard instantly stores any item you copy in the cloud,
-  meaning you can access your snippets immediately on all your
-  devices. Our Mac and iOS apps will help you organize everything.
-
-  Quick Search
-
-  Easily search your snippets by content, category, web address, application, and more.
-
-  iCloud Sync
-
-  Instantly saves and syncs snippets across all your devices.
-
-  Complete History
-
-  Retrieve any snippets from the first moment you started using the app.
-
-  Access Clipboard anywhere
-
-  Whether you’re on the go, or at your computer, you can access all your Clipboard
-  snippets in a few simple clicks.
-
-  Supercharge your workflow
-
-  We’ve got the tools to boost your productivity.
-
-  Create blacklists
-
-  Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
-
-  Plain text snippets
-
-  Remove unwanted formatting from copied text for a consistent look.
-
-  Sneak preview
-
-  Quick preview of all snippets on your Clipboard for easy access.
-
-  Clipboard for iOS and Mac OS
-
-  Available for free on the App Store. Download for Mac or iOS, sync with iCloud
-  and you’re ready to start adding to your clipboard.
-
-  Download for iOS
-  Download for Mac
-
-  FAQs
-  Contact Us
-  Privacy Policy
-  Press Kit
-  Install Guide
-
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
-</body>
+    Access Clipboard anywhere Whether you’re on the go, or at your computer, you
+    can access all your Clipboard snippets in a few simple clicks. Supercharge
+    your workflow We’ve got the tools to boost your productivity. Create
+    blacklists Ensure sensitive information never makes its way to your
+    clipboard by excluding certain sources. Plain text snippets Remove unwanted
+    formatting from copied text for a consistent look. Sneak preview Quick
+    preview of all snippets on your Clipboard for easy access. Clipboard for iOS
+    and Mac OS Available for free on the App Store. Download for Mac or iOS,
+    sync with iCloud and you’re ready to start adding to your clipboard.
+    Download for iOS Download for Mac FAQs Contact Us Privacy Policy Press Kit
+    Install Guide
+  </body>
 </html>
