--- a/index.html
+++ b/index.html
@@ -46,30 +46,48 @@
           </button>
         </div>
       </section>
-      <section class="max-w-full max-h-full flex flex-col mb-52">
-        <h1>Keep track of your snippets</h1>
-        <p>
+      <section
+        class="max-w-full max-h-full flex flex-col mb-52 text-center px-5"
+      >
+        <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
+          Keep track of your snippets
+        </h1>
+        <p class="text-grayish-blue/90 mb-15 px-9">
           Clipboard instantly stores any item you copy in the cloud, meaning you
           can access your snippets immediately on all your devices. Our Mac and
           iOS apps will help you organize everything.
         </p>
         <div>
           <img src="images/image-computer.png" alt="Computer" />
-          <div>
+          <div class="mt-10 flex flex-col gap-10">
             <div>
-              <h2>Quick Search</h2>
-              <p>
+              <h2
+                class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4"
+              >
+                Quick Search
+              </h2>
+              <p class="text-grayish-blue/90 px-15">
                 Easily search your snippets by content, category, web address,
                 application, and more.
               </p>
             </div>
             <div>
-              <h2>iCloud Sync</h2>
-              <p>Instantly saves and syncs snippets across all your devices.</p>
+              <h2
+                class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4"
+              >
+                iCloud Sync
+              </h2>
+              <p class="text-grayish-blue/90 px-15">
+                Instantly saves and syncs snippets across all your devices.
+              </p>
             </div>
             <div>
-              <h2>Complete History</h2>
-              <p>
+              <h2
+                class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4"
+              >
+                Complete History
+              </h2>
+              <p class="text-grayish-blue/90 px-15">
                 Retrieve any snippets from the first moment you started using
                 the app.
               </p>
