--- a/index.html
+++ b/index.html
@@ -95,12 +95,22 @@
           </div>
         </div>
       </section>
+      <section
+        class="max-w-full max-h-full flex flex-col mb-52 text-center px-5"
+      >
+        <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
+          Access Clipboard Anywhere
+        </h1>
+        <p class="text-grayish-blue/90 mb-15 px-15">
+          Whether you’re on the go, or at your computer, you can access all your
+          Clipboard snippets in a few simple clicks.
+        </p>
+        <img src="images/image-devices.png" alt="" />
+      </section>
     </main>
 
-    Access Clipboard anywhere Whether you’re on the go, or at your computer, you
-    can access all your Clipboard snippets in a few simple clicks. Supercharge
-    your workflow We’ve got the tools to boost your productivity. Create
-    blacklists Ensure sensitive information never makes its way to your
+    Supercharge your workflow We’ve got the tools to boost your productivity.
+    Create blacklists Ensure sensitive information never makes its way to your
     clipboard by excluding certain sources. Plain text snippets Remove unwanted
     formatting from copied text for a consistent look. Sneak preview Quick
     preview of all snippets on your Clipboard for easy access. Clipboard for iOS
