--- a/index.html
+++ b/index.html
@@ -107,16 +107,49 @@
         </p>
         <img src="images/image-devices.png" alt="" />
       </section>
+      <section
+        class="max-w-full max-h-full flex flex-col mb-52 text-center px-5"
+      >
+        <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
+          Supercharge your workflow
+        </h1>
+        <p class="text-grayish-blue/90 mb-15 px-15">
+          We’ve got the tools to boost your productivity.
+        </p>
+        <div class="flex flex-col items-center gap-7">
+          <img src="images/icon-blacklist.svg" alt="blacklists" />
+          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
+            Create blacklists
+          </h2>
+          <p class="text-grayish-blue/90 px-15">
+            Ensure sensitive information never makes its way to your clipboard
+            by excluding certain sources.
+          </p>
+        </div>
+        <div class="flex flex-col items-center gap-5 mt-10">
+          <img src="images/icon-text.svg" alt="blacklists" />
+          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
+            Plain text snippets
+          </h2>
+          <p class="text-grayish-blue/90 px-15">
+            Remove unwanted formatting from copied text for a consistent look.
+          </p>
+        </div>
+        <div class="flex flex-col items-center gap-5 mt-10">
+          <img src="images/icon-preview.svg" alt="preview" />
+          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
+            Sneak preview
+          </h2>
+          <p class="text-grayish-blue/90 px-15">
+            Quick preview of all snippets on your Clipboard for easy access.
+          </p>
+        </div>
+      </section>
     </main>
 
-    Supercharge your workflow We’ve got the tools to boost your productivity.
-    Create blacklists Ensure sensitive information never makes its way to your
-    clipboard by excluding certain sources. Plain text snippets Remove unwanted
-    formatting from copied text for a consistent look. Sneak preview Quick
-    preview of all snippets on your Clipboard for easy access. Clipboard for iOS
-    and Mac OS Available for free on the App Store. Download for Mac or iOS,
-    sync with iCloud and you’re ready to start adding to your clipboard.
-    Download for iOS Download for Mac FAQs Contact Us Privacy Policy Press Kit
-    Install Guide
+    Clipboard for iOS and Mac OS Available for free on the App Store. Download
+    for Mac or iOS, sync with iCloud and you’re ready to start adding to your
+    clipboard. Download for iOS Download for Mac FAQs Contact Us Privacy Policy
+    Press Kit Install Guide
   </body>
 </html>
