--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
         <img src="images/image-devices.png" alt="" />
       </section>
       <section
-        class="max-w-full max-h-full flex flex-col mb-52 text-center px-5"
+        class="max-w-full max-h-full flex flex-col mb-44 text-center px-5"
       >
         <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
           Supercharge your workflow
@@ -144,6 +144,15 @@
             Quick preview of all snippets on your Clipboard for easy access.
           </p>
         </div>
+      </section>
+      <section
+        class="max-w-full max-h-full items-center justify-center flex flex-col mb-52 text-center px-35 gap-10"
+      >
+        <img src="images/logo-google.png" alt="Google" />
+        <img src="images/logo-ibm.png" alt="ibm" />
+        <img src="images/logo-microsoft.png" alt="logo-microsoft" />
+        <img src="images/logo-hp.png" alt="HP" />
+        <img src="images/logo-vector-graphics.png" alt="logo-vector-graphics" />
       </section>
     </main>
 
