--- a/index.html
+++ b/index.html
@@ -154,12 +154,30 @@
         <img src="images/logo-hp.png" alt="HP" />
         <img src="images/logo-vector-graphics.png" alt="logo-vector-graphics" />
       </section>
-      se
+      <section
+        class="max-w-full max-h-full items-center justify-center flex flex-col mb-52 text-center px-15"
+      >
+        <h1 class="text-3xl font-semibold text-dark-grayish-blue mb-5">
+          Clipboard for iOS and Mac OS
+        </h1>
+        <p class="text-grayish-blue/90 mb-10 px-6.5">
+          Available for free on the App Store. Download for Mac or iOS, sync
+          with iCloud and you’re ready to start adding to your clipboard.
+        </p>
+        <div class="flex flex-col gap-5 w-full text-white">
+          <button
+            class="w-full bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
+          >
+            Download for iOS
+          </button>
+          <button
+            class="w-full bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
+          >
+            Download for Mac
+          </button>
+        </div>
+      </section>
     </main>
-
-    Clipboard for iOS and Mac OS Available for free on the App Store. Download
-    for Mac or iOS, sync with iCloud and you’re ready to start adding to your
-    clipboard. Download for iOS Download for Mac FAQs Contact Us Privacy Policy
-    Press Kit Install Guide
+    FAQs Contact Us Privacy Policy Press Kit Install Guide
   </body>
 </html>
