--- a/index.html
+++ b/index.html
@@ -178,17 +178,19 @@
         </div>
       </section>
     </main>
-    <footer class="max-w-full max-h-full min-w-full min-h-full bg-grayish-blue/10 py-15 items-center justify-center flex flex-col  text-center px-10 gap-5">
-      <img src="images/logo.svg" alt="logo" class="size-12 mb-2">
+    <footer
+      class="max-w-full max-h-full min-w-full min-h-full bg-grayish-blue/10 py-15 items-center justify-center flex flex-col text-center px-10 gap-5"
+    >
+      <img src="images/logo.svg" alt="logo" class="size-12 mb-2" />
       <a href="#"> FAQs</a>
       <a href="#">Contact Us</a>
       <a href="#">Privacy Policy </a>
       <a href="#">Press Kit </a>
       <a href="#">Install Guide</a>
       <div class="flex flex-row gap-10 mt-10">
-        <img src="images/icon-facebook.svg" alt="icon-facebook">
-        <img src="images/icon-twitter.svg" alt="icon-twitter">
-        <img src="images/icon-instagram.svg" alt="icon-instagram">
+        <img src="images/icon-facebook.svg" alt="icon-facebook" />
+        <img src="images/icon-twitter.svg" alt="icon-twitter" />
+        <img src="images/icon-instagram.svg" alt="icon-instagram" />
       </div>
     </footer>
   </body>
