--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
             </div>
             <div>
               <h2
-                class=" lg:px-15 text-2xl font-semibold text-dark-grayish-blue px-7 mb-4"
+                class="lg:px-15 text-2xl font-semibold text-dark-grayish-blue px-7 mb-4"
               >
                 Complete History
               </h2>
@@ -100,19 +100,19 @@
         </div>
       </section>
       <section
-        class="max-w-full max-h-full flex flex-col mb-28 text-center px-5"
+        class="max-w-full items-center max-h-full flex flex-col mb-28 text-center px-5"
       >
         <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
           Access Clipboard Anywhere
         </h1>
-        <p class="text-grayish-blue/90 mb-15 px-15">
+        <p class="lg:px-52 text-grayish-blue/90 mb-15 px-15">
           Whether you’re on the go, or at your computer, you can access all your
           Clipboard snippets in a few simple clicks.
         </p>
-        <img src="images/image-devices.png" alt="" />
+        <img src="images/image-devices.png" alt="" class="lg:max-w-3xl" />
       </section>
       <section
-        class="max-w-full max-h-full flex flex-col mb-44 text-center px-5"
+        class="max-w-full items-center max-h-full flex flex-col mb-44 text-center px-5"
       >
         <h1 class="text-3xl font-semibold text-dark-grayish-blue px-7 mb-4">
           Supercharge your workflow
@@ -120,43 +120,55 @@
         <p class="text-grayish-blue/90 mb-15 px-15">
           We’ve got the tools to boost your productivity.
         </p>
-        <div class="flex flex-col items-center gap-7">
-          <img src="images/icon-blacklist.svg" alt="blacklists" />
-          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
-            Create blacklists
-          </h2>
-          <p class="text-grayish-blue/90 px-15">
-            Ensure sensitive information never makes its way to your clipboard
-            by excluding certain sources.
-          </p>
-        </div>
-        <div class="flex flex-col items-center gap-5 mt-10">
-          <img src="images/icon-text.svg" alt="blacklists" />
-          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
-            Plain text snippets
-          </h2>
-          <p class="text-grayish-blue/90 px-15">
-            Remove unwanted formatting from copied text for a consistent look.
-          </p>
-        </div>
-        <div class="flex flex-col items-center gap-5 mt-10">
-          <img src="images/icon-preview.svg" alt="preview" />
-          <h2 class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4">
-            Sneak preview
-          </h2>
-          <p class="text-grayish-blue/90 px-15">
-            Quick preview of all snippets on your Clipboard for easy access.
-          </p>
+        <div class="lg:flex items-center justify-center">
+          <div class="flex flex-col items-center gap-5 mt-10 lg:mt-0 w-full">
+            <img src="images/icon-blacklist.svg" alt="blacklists" />
+            <h2
+              class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4 lg:mb-0"
+            >
+              Create blacklists
+            </h2>
+            <p class="text-grayish-blue/90 px-15">
+              Ensure sensitive information never makes its way to your clipboard
+              by excluding certain sources.
+            </p>
+          </div>
+          <div class="flex flex-col items-center gap-5 mt-10 lg:mt-0 w-full">
+            <img src="images/icon-text.svg" alt="blacklists" />
+            <h2
+              class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4 lg:mb-0"
+            >
+              Plain text snippets
+            </h2>
+            <p class="text-grayish-blue/90 px-15">
+              Remove unwanted formatting from copied text for a consistent look.
+            </p>
+          </div>
+          <div class="flex flex-col items-center gap-5 mt-10 lg:mt-0 w-full">
+            <img src="images/icon-preview.svg" alt="preview" />
+            <h2
+              class="text-2xl font-semibold text-dark-grayish-blue px-7 mb-4 lg:mb-0"
+            >
+              Sneak preview
+            </h2>
+            <p class="text-grayish-blue/90 px-15">
+              Quick preview of all snippets on your Clipboard for easy access.
+            </p>
+          </div>
         </div>
       </section>
       <section
-        class="max-w-full max-h-full items-center justify-center flex flex-col mb-52 text-center px-35 gap-10"
+        class="max-w-full max-h-full items-center justify-center flex flex-col lg:flex-row lg:justify-between mb-52 text-center px-35 gap-10"
       >
-        <img src="images/logo-google.png" alt="Google" />
+        <img src="images/logo-google.png" alt="Google" class="" />
         <img src="images/logo-ibm.png" alt="ibm" />
-        <img src="images/logo-microsoft.png" alt="logo-microsoft" />
-        <img src="images/logo-hp.png" alt="HP" />
-        <img src="images/logo-vector-graphics.png" alt="logo-vector-graphics" />
+        <img src="images/logo-microsoft.png" alt="logo-microsoft" class="" />
+        <img src="images/logo-hp.png" alt="HP" class="" />
+        <img
+          src="images/logo-vector-graphics.png"
+          alt="logo-vector-graphics"
+          class=""
+        />
       </section>
       <section
         class="max-w-full max-h-full items-center justify-center flex flex-col mb-52 text-center px-15"
