--- a/index.html
+++ b/index.html
@@ -198,7 +198,9 @@
       class="max-w-full max-h-full min-w-full min-h-full bg-grayish-blue/10 py-15 items-center lg:justify-evenly justify-center lg:flex-row flex flex-col text-center px-10 gap-5"
     >
       <img src="images/logo.svg" alt="logo" class="size-12 mb-2" />
-      <div class="lg:flex-row flex-col gap-5 flex lg:gap-15 lg:text-left lg:items-center lg:justify-between">
+      <div
+        class="lg:flex-row flex-col gap-5 flex lg:gap-15 lg:text-left lg:items-center lg:justify-between"
+      >
         <div class="flex gap-4 lg:gap-2 flex-col">
           <a href="#"> FAQs</a>
           <a href="#">Contact Us</a>
