--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       </p>
       <div class="flex lg:flex-row lg:w-2xl flex-col gap-5 w-full text-white">
         <button
-          class="w-full bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
+          class="w-full hover:opacity-70 transition-opacity cursor-pointer bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
         >
           Download for iOS
         </button>
         <button
-          class="w-full bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
+          class="w-full hover:opacity-70 transition-opacity cursor-pointer bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
         >
           Download for Mac
         </button>
@@ -182,12 +182,12 @@
         </p>
         <div class="flex lg:flex-row lg:w-2xl flex-col gap-5 w-full text-white">
           <button
-            class="w-full bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
+            class="w-full hover:opacity-70 transition-opacity cursor-pointer bg-strong-cyan py-2.5 rounded-full shadow-md shadow-strong-cyan/40 inset-shadow-xs"
           >
             Download for iOS
           </button>
           <button
-            class="w-full bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
+            class="w-full hover:opacity-70 transition-opacity cursor-pointer bg-light-blue py-2.5 rounded-full shadow-md shadow-light-blue/40 inset-shadow-xs"
           >
             Download for Mac
           </button>
@@ -202,15 +202,15 @@
         class="lg:flex-row flex-col gap-5 flex lg:gap-15 lg:text-left lg:items-center lg:justify-between"
       >
         <div class="flex gap-4 lg:gap-2 flex-col">
-          <a href="#"> FAQs</a>
-          <a href="#">Contact Us</a>
+          <a href="#" class="hover:text-strong-cyan"> FAQs</a>
+          <a href="#" class="hover:text-strong-cyan">Contact Us</a>
         </div>
         <div class="flex gap-4 lg:gap-2 flex-col">
-          <a href="#">Privacy Policy </a>
-          <a href="#">Press Kit </a>
+          <a href="#" class="hover:text-strong-cyan">Privacy Policy </a>
+          <a href="#" class="hover:text-strong-cyan">Press Kit </a>
         </div>
         <div class="flex gap-4 lg:gap-2 self-start flex-col">
-          <a href="#">Install Guide</a>
+          <a href="#" class="hover:text-strong-cyan">Install Guide</a>
         </div>
       </div>
       <div class="flex flex-row gap-10 lg:mt-0 lg:gap-4 mt-10">
