--- a/index.html
+++ b/index.html
@@ -217,17 +217,17 @@
         <img
           src="images/icon-facebook.svg"
           alt="icon-facebook"
-          class="lg:size-5"
+          class="lg:size-5 hover:text-strong-cyan"
         />
         <img
           src="images/icon-twitter.svg"
           alt="icon-twitter"
-          class="lg:size-5"
+          class="lg:size-5 hover:text-strong-cyan"
         />
         <img
           src="images/icon-instagram.svg"
           alt="icon-instagram"
-          class="lg:size-5"
+          class="lg:size-5 hover:text-strong-cyan"
         />
       </div>
     </footer>
